Added endpoint for hobbies
